[package]
name = "wolf4rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde-big-array = "0.5"
libm = "0.2.6"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["mixer"]

[features]
default = ["GOODTIMES"]

# Wolf3d Shareware v1.4, WL1 Files
UPLOAD = []
# Wolf3d Full v1.4 GT/ID/Activision, WL6 Files
GOODTIMES = []